--- a/ShopListPriceEditor/MainWindow.xaml
+++ b/ShopListPriceEditor/MainWindow.xaml
@@ -21,8 +21,9 @@
                         <Button Content="{DynamicResource consumables}" HorizontalAlignment="Left" VerticalAlignment="Top" Click="AllConsumables" Height="24" Width="126" Margin="0,0,0,5"/>
                         <Button Content="{DynamicResource lr_mats}" HorizontalAlignment="Left" VerticalAlignment="Top" Click="LRMaterials" Height="24" Width="126" Margin="0,0,0,5"/>
                         <Button Content="{DynamicResource hr_mats}" HorizontalAlignment="Left" VerticalAlignment="Top" Click="HRMaterials" Height="24" Width="126" Margin="0,0,0,5"/>
+                        <Button Content="{DynamicResource mr_mats_A_L}" HorizontalAlignment="Left" VerticalAlignment="Top" Click="MRMaterials_AL" Height="24" Width="126" Margin="0,0,0,5"/>
+                        <Button Content="{DynamicResource mr_mats_M_Z}" HorizontalAlignment="Left" VerticalAlignment="Top" Click="MRMaterials_MZ" Height="24" Width="126" Margin="0,0,0,5"/>
                         <Button Content="{DynamicResource gl_mats}" HorizontalAlignment="Left" VerticalAlignment="Top" Click="GLMaterials" Height="24" Width="126" Margin="0,0,0,5"/>
-                        <Button Content="{DynamicResource mr_mats}" HorizontalAlignment="Left" VerticalAlignment="Top" Click="MRMaterials" Height="24" Width="126" Margin="0,0,0,5"/>
                         <Button Content="{DynamicResource sort}" Visibility="Hidden"  HorizontalAlignment="Left" VerticalAlignment="Top" Click="Sort" Height="24" Width="116" Margin="5,20,5,0"/>
                         <Button Content="{DynamicResource clear}" HorizontalAlignment="Left" VerticalAlignment="Top" Click="ClearItems" Height="24" Width="116" Margin="5,10,5,5" />
                         <Button Content="{DynamicResource undo}" Visibility="Hidden" HorizontalAlignment="Left" VerticalAlignment="Top" Click="Undo" Height="24" Width="116" Margin="5,10,0,0"/>
